// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Category collapsible card for filtration render tests Test renders the renderCategoryCollapsibleCard and filteredCategories FlatList  1`] = `
[
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "borderBottomColor": "#e0e0e0",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "opacity": 1,
        "paddingHorizontal": 10,
        "paddingVertical": 15,
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text>
        [missing "en.WORKLIST.CATEGORY" translation]
      </Text>
      <Text
        style={
          {
            "color": "#9e9e9e",
            "fontSize": 12,
          }
        }
      >
        5 [missing "en.GENERICS.SELECTED" translation]
      </Text>
    </View>
    <View
      style={
        {
          "flex": 0.1,
        }
      }
    >
      <Icon
        color="#616161"
        name="keyboard-arrow-up"
        size={25}
      />
    </View>
  </View>,
  <RCTScrollView
    data={
      [
        {
          "catgName": "WINE",
          "catgNbr": 19,
          "selected": false,
        },
        {
          "catgName": "PHARMACY RX",
          "catgNbr": 87,
          "selected": false,
        },
        {
          "catgName": "FRESH BAKERY",
          "catgNbr": 88,
          "selected": false,
        },
        {
          "catgName": "FOODSERVICE",
          "catgNbr": 93,
          "selected": false,
        },
        {
          "catgName": "ELECTRONICS",
          "catgNbr": 99,
          "selected": false,
        },
        {
          "catgName": "ELECTRONICS",
          "catgNbr": 199,
          "selected": false,
        },
      ]
    }
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={[]}
    style={
      {
        "flex": 1,
      }
    }
    viewabilityConfigCallbackPairs={[]}
  >
    <View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "height": 40,
              "justifyContent": "flex-start",
              "opacity": 1,
            }
          }
          testID="category button"
        >
          <View
            style={
              {
                "alignItems": "center",
                "justifyContent": "center",
                "width": "10%",
              }
            }
          >
            <Icon
              color="#0071e9"
              name="checkbox-blank-outline"
              size={15}
            />
          </View>
          <Text
            numberOfLines={2}
            style={
              {
                "width": "90%",
              }
            }
          >
            19 - WINE 
          </Text>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "height": 40,
              "justifyContent": "flex-start",
              "opacity": 1,
            }
          }
          testID="category button"
        >
          <View
            style={
              {
                "alignItems": "center",
                "justifyContent": "center",
                "width": "10%",
              }
            }
          >
            <Icon
              color="#0071e9"
              name="checkbox-blank-outline"
              size={15}
            />
          </View>
          <Text
            numberOfLines={2}
            style={
              {
                "width": "90%",
              }
            }
          >
            87 - PHARMACY RX 
          </Text>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "height": 40,
              "justifyContent": "flex-start",
              "opacity": 1,
            }
          }
          testID="category button"
        >
          <View
            style={
              {
                "alignItems": "center",
                "justifyContent": "center",
                "width": "10%",
              }
            }
          >
            <Icon
              color="#0071e9"
              name="checkbox-blank-outline"
              size={15}
            />
          </View>
          <Text
            numberOfLines={2}
            style={
              {
                "width": "90%",
              }
            }
          >
            88 - FRESH BAKERY 
          </Text>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "height": 40,
              "justifyContent": "flex-start",
              "opacity": 1,
            }
          }
          testID="category button"
        >
          <View
            style={
              {
                "alignItems": "center",
                "justifyContent": "center",
                "width": "10%",
              }
            }
          >
            <Icon
              color="#0071e9"
              name="checkbox-blank-outline"
              size={15}
            />
          </View>
          <Text
            numberOfLines={2}
            style={
              {
                "width": "90%",
              }
            }
          >
            93 - FOODSERVICE 
          </Text>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "height": 40,
              "justifyContent": "flex-start",
              "opacity": 1,
            }
          }
          testID="category button"
        >
          <View
            style={
              {
                "alignItems": "center",
                "justifyContent": "center",
                "width": "10%",
              }
            }
          >
            <Icon
              color="#0071e9"
              name="checkbox-blank-outline"
              size={15}
            />
          </View>
          <Text
            numberOfLines={2}
            style={
              {
                "width": "90%",
              }
            }
          >
            99 - ELECTRONICS 
          </Text>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "height": 40,
              "justifyContent": "flex-start",
              "opacity": 1,
            }
          }
          testID="category button"
        >
          <View
            style={
              {
                "alignItems": "center",
                "justifyContent": "center",
                "width": "10%",
              }
            }
          >
            <Icon
              color="#0071e9"
              name="checkbox-blank-outline"
              size={15}
            />
          </View>
          <Text
            numberOfLines={2}
            style={
              {
                "width": "90%",
              }
            }
          >
            199 - ELECTRONICS 
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>,
]
`;

exports[`Category collapsible card for filtration render tests Test the renderCategoryCollapsibleCard and calls dispatch() 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "borderBottomColor": "#e0e0e0",
      "borderBottomWidth": 1,
      "flexDirection": "row",
      "opacity": 1,
      "paddingHorizontal": 10,
      "paddingVertical": 15,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text>
      [missing "en.WORKLIST.CATEGORY" translation]
    </Text>
    <Text
      style={
        {
          "color": "#9e9e9e",
          "fontSize": 12,
        }
      }
    >
      5 [missing "en.GENERICS.SELECTED" translation]
    </Text>
  </View>
  <View
    style={
      {
        "flex": 0.1,
      }
    }
  >
    <Icon
      color="#616161"
      name="keyboard-arrow-down"
      size={25}
    />
  </View>
</View>
`;

exports[`Category collapsible card for filtration render tests Tests renderCategoryFilterCard component and calls onItemPress with an item selected 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
      "height": 40,
      "justifyContent": "flex-start",
      "opacity": 1,
    }
  }
  testID="category button"
>
  <View
    style={
      {
        "alignItems": "center",
        "justifyContent": "center",
        "width": "10%",
      }
    }
  >
    <Icon
      color="#0071e9"
      name="checkbox-marked-outline"
      size={15}
    />
  </View>
  <Text
    numberOfLines={2}
    style={
      {
        "width": "90%",
      }
    }
  >
    12 - WINE 
  </Text>
</View>
`;

exports[`Category collapsible card for filtration render tests Tests renderCategoryFilterCard component and calls onItemPress without an item selected 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
      "height": 40,
      "justifyContent": "flex-start",
      "opacity": 1,
    }
  }
  testID="category button"
>
  <View
    style={
      {
        "alignItems": "center",
        "justifyContent": "center",
        "width": "10%",
      }
    }
  >
    <Icon
      color="#0071e9"
      name="checkbox-blank-outline"
      size={15}
    />
  </View>
  <Text
    numberOfLines={2}
    style={
      {
        "width": "90%",
      }
    }
  >
    7 - TOYS 
  </Text>
</View>
`;
